[project]
name = "faststore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "clerk-backend-api>=4.0.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.121.1",
    "groq>=0.34.1",
    "imagekitio>=4.2.0",
    "langchain>=1.1.0",
    "libsql>=0.1.11",
    "pydantic-settings>=2.12.0",
    "python-jose[cryptography]>=3.5.0",
    "redis>=7.1.0",
    "resend>=2.19.0",
    "sqlalchemy-libsql>=0.2.0",
    "uvicorn>=0.38.0",
]
